# maszyna-client

./: .gitattributes  CMakeLists.txt
client/: CMakeLists.txt
client/include/Maszyna.Diagnostics/: Trace.hxx
client/schema/: model.fbs
client/src/: CMakeLists.txt  main.cpp
client/src/Maszyna.Diagnostics/: CMakeLists.txt  Trace.cpp  Trace.cxx
